--- a/index.html
+++ b/index.html
@@ -87,21 +87,20 @@
             <div class="name">Tô Nguyễn Tường Vân</div>
         </div>
     </div>
+<div class="lessons">
+        <h2>DANH SÁCH BÀI HỌC</h2>
+
+        <div class="lesson-item">Bài 1: Giới thiệu</div>
+        <div class="lesson-item">Bài 2: Lý thuyết cơ bản</div>
+        <div class="lesson-item">Bài 3: Ví dụ nâng cao</div>
+        <div class="lesson-item">Bài 4: Bài tập áp dụng</div>
+        <div class="lesson-item">Bài 5: Kiểm tra nhanh</div>
+        <div class="lesson-item">Bài 6: Ôn tập</div>
+        <div class="lesson-item">Bài 7: Chuyên đề 1</div>
+        <div class="lesson-item">Bài 8: Chuyên đề 2</div>
+        <div class="lesson-item">Bài 9: Tổng hợp</div>
+        <div class="lesson-item">Bài 10: Kết thúc</div>
+    </div>
+
 </body>
-	<!-- Danh sách bài học -->
-<section class="lessons">
-    <h2>Danh sách Bài Học</h2>
-    <ul class="lesson-list">
-        <li><a href="#">Bài 1: Làm quen với trí tuệ nhân tạo</a></li>
-        <li><a href="#">Bài 2: Trí tuệ nhân tạo trong khoa học và đời sống</a></li>
-        <li><a href="#">Bài 3: Một số thiết bị mạng thông dụng</a></li>
-        <li><a href="#">Bài 4: Giao thức mạng</a></li>
-        <li><a href="#">Bài 5: Thực hành chia sẻ tài nguyên trên mạng</a></li>
-        <li><a href="#">Bài 6: Giao tiếp và ứng xử trong không gian mạng</a></li>
-        <li><a href="#">Bài 7: HTML và cấu trúc trang web</a></li>
-        <li><a href="#">Bài 8: Định dạng văn bản</a></li>
-        <li><a href="#">Bài 9: Tạo danh sách, bảng</a></li>
-        <li><a href="#">Bài 10: Tạo liên kết</a></li>
-    </ul>
-</section>
 </html>
