--- a/index.html
+++ b/index.html
@@ -74,6 +74,44 @@
 .lesson-list a:hover {
     color: #0056b3;
 }
+.lessons {
+    margin-top: 40px;
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+}
+
+.lesson-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    gap: 15px; /* khoảng cách giữa các khung */
+}
+
+.lesson-list li {
+    /* không cần margin riêng nữa, dùng gap trong grid */
+}
+
+.lesson-list a {
+    display: block; /* biến link thành khối */
+    padding: 20px; /* tạo khung to */
+    background: #f8f9fa; /* màu nền khung */
+    border-radius: 12px;
+    text-decoration: none;
+    color: #007bff;
+    font-weight: 600;
+    font-size: 18px;
+    transition: 0.2s;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.lesson-list a:hover {
+    background: #e2e6ea; /* màu khi hover */
+    color: #0056b3;
+    transform: translateY(-2px); /* nổi lên 1 chút */
+}
     </style>
 </head>
 <body>
@@ -133,3 +171,4 @@
     </ul>
 </section>
 </html>
+
