--- a/index.html
+++ b/index.html
@@ -118,42 +118,35 @@
     <h1>6 thành viên của nhóm</h1>
     
     <div class="container">
-        <!-- Thành viên 1 -->
         <div class="member">
-            <img src="images/anh1.jpg" alt="Thành viên 1" />
-            <div class="name">Đặng Nguyễn Trúc My</div>
-        </div>
+    <img src="images/anh1.jpg" alt="Đặng Nguyễn Trúc My" />
+    <div class="name">Đặng Nguyễn Trúc My</div>
+</div>
 
-        <!-- Thành viên 2 -->
-        <div class="member">
-            <img src="images/anh2.jpg" alt="Thành viên 2" />
-            <div class="name">Nguyễn Bảo Thy</div>
-        </div>
+<div class="member">
+    <img src="images/anh2.jpg" alt="Nguyễn Bảo Thy" />
+    <div class="name">Nguyễn Bảo Thy</div>
+</div>
 
-        <!-- Thành viên 3 -->
-        <div class="member">
-            <img src="images/anh3.jpg" alt="Thành viên 3" />
-            <div class="name">Ngô Thanh Trúc</div>
-        </div>
+<div class="member">
+    <img src="images/anh3.jpg" alt="Ngô Thanh Trúc" />
+    <div class="name">Ngô Thanh Trúc</div>
+</div>
 
-        <!-- Thành viên 4 -->
-        <div class="member">
-            <img src="images/anh4.jpg" alt="Thành viên 4" />
-            <div class="name">Huỳnh Ánh Dương</div>
-        </div>
+<div class="member">
+    <img src="images/anh4.jpg" alt="Huỳnh Ánh Dương" />
+    <div class="name">Huỳnh Ánh Dương</div>
+</div>
 
-        <!-- Thành viên 5 -->
-        <div class="member">
-            <img src="images/anh5.jpg" alt="Thành viên 5" />
-            <div class="name">Nguyễn Huỳnh Bảo Hân</div>
-	</div>
+<div class="member">
+    <img src="images/anh5.jpg" alt="Nguyễn Huỳnh Bảo Hân" />
+    <div class="name">Nguyễn Huỳnh Bảo Hân</div>
+</div>
 
-        <!-- Thành viên 6 -->
-        <div class="member">
-            <img src="images/anh6.jpg" alt="Thành viên 6" />
-            <div class="name">Tô Nguyễn Tường Vân</div>
-        </div>
-    </div>
+<div class="member">
+    <img src="images/anh6.jpg" alt="Tô Nguyễn Tường Vân" />
+    <div class="name">Tô Nguyễn Tường Vân</div>
+</div>
 <!-- Danh sách bài học -->
 <section class="lessons">
     <h2>Danh sách Bài Học</h2>
@@ -171,4 +164,5 @@
     </ul>
 </section>
 </html>
+
 
