--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </style>
 </head>
 <body>
-    <h1>6 thành viên của nhóm</h1>
+    <h1>Các thành viên của nhóm</h1>
     
     <div class="container">
         <div class="member">
@@ -164,5 +164,6 @@
     </ul>
 </section>
 </html>
+
 
 
