--- a/index.html
+++ b/index.html
@@ -119,32 +119,32 @@
     
     <div class="container">
         <div class="member">
-    <img src="images/anh1.jpg" alt="Đặng Nguyễn Trúc My" />
+    <img src="anh1.jpg" alt="Đặng Nguyễn Trúc My" />
     <div class="name">Đặng Nguyễn Trúc My</div>
 </div>
 
 <div class="member">
-    <img src="images/anh2.jpg" alt="Nguyễn Bảo Thy" />
+    <img src="anh2.jpg" alt="Nguyễn Bảo Thy" />
     <div class="name">Nguyễn Bảo Thy</div>
 </div>
 
 <div class="member">
-    <img src="images/anh3.jpg" alt="Ngô Thanh Trúc" />
+    <img src="anh3.jpg" alt="Ngô Thanh Trúc" />
     <div class="name">Ngô Thanh Trúc</div>
 </div>
 
 <div class="member">
-    <img src="images/anh4.jpg" alt="Huỳnh Ánh Dương" />
+    <img src="anh4.jpg" alt="Huỳnh Ánh Dương" />
     <div class="name">Huỳnh Ánh Dương</div>
 </div>
 
 <div class="member">
-    <img src="images/anh5.jpg" alt="Nguyễn Huỳnh Bảo Hân" />
+    <img src="anh5.jpg" alt="Nguyễn Huỳnh Bảo Hân" />
     <div class="name">Nguyễn Huỳnh Bảo Hân</div>
 </div>
 
 <div class="member">
-    <img src="images/anh6.jpg" alt="Tô Nguyễn Tường Vân" />
+    <img src="anh6.jpg" alt="Tô Nguyễn Tường Vân" />
     <div class="name">Tô Nguyễn Tường Vân</div>
 </div>
 <!-- Danh sách bài học -->
@@ -164,3 +164,4 @@
     </ul>
 </section>
 </html>
+
