--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thành viên nhóm 5</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-            margin: 0;
-            padding: 20px;
-        }
+    	body {
+        	font-family: Arial, sans-serif;
+        	background: linear-gradient(to bottom, #EAF6FF, #FFFFFF); /* MÀU XANH PASTEL */
+        	margin: 0;
+        	padding: 20px;
+   		}
+
         h1 {
             text-align: center;
             margin-bottom: 30px;
@@ -190,3 +191,4 @@ h2 { /* Giả sử bạn dùng thẻ h2 cho tiêu đề */
     </ul>
 </section>
 </html>
+
