--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Thành viên nhóm 5</title>
     <style>
     	body {
-        	font-family: Arial, sans-serif;
-        	background: linear-gradient(to bottom, #EAF6FF, #FFFFFF); /* MÀU XANH PASTEL */
-        	margin: 0;
-        	padding: 20px;
-   		}
-
+  			font-family: Arial, sans-serif;
+  			background: #EAF6FF;   /* MÀU XANH PASTEL */
+  			margin: 0;
+  			padding: 0;
+		}
         h1 {
             text-align: center;
             margin-bottom: 30px;
@@ -191,4 +190,5 @@ h2 { /* Giả sử bạn dùng thẻ h2 cho tiêu đề */
     </ul>
 </section>
 </html>
+
 
