--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
     list-style: none;
     padding: 0;
     margin: 0;
+
     display: grid;
-    gap: 15px; /* khoảng cách giữa các khung */
+    grid-template-columns: repeat(2, 1fr); /* CHIA 2 CỘT */
+    gap: 15px 25px; /* khoảng cách giữa bài học */
 }
 
 .lesson-list li {
@@ -190,5 +192,6 @@ h2 { /* Giả sử bạn dùng thẻ h2 cho tiêu đề */
     </ul>
 </section>
 </html>
+
 
 
