--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
 }
 
 .lesson-list a {
-    display: block; /* biến link thành khối */
-    padding: 20px; /* tạo khung to */
-    background: #f8f9fa; /* màu nền khung */
+    display: block;
+    width: 90%;              /* CHO NÓ DÀI RA */
+    padding: 20px;
+    background: #f8f9fa;
     border-radius: 12px;
     text-decoration: none;
     color: #007bff;
@@ -107,6 +108,8 @@
     font-size: 18px;
     transition: 0.2s;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+
+    margin: 0 auto;          /* CĂN GIỮA KHUNG */
 }
 
 .lesson-list a:hover {
@@ -192,6 +195,7 @@ h2 { /* Giả sử bạn dùng thẻ h2 cho tiêu đề */
     </ul>
 </section>
 </html>
+
 
 
 
