--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thành viên nhóm 5</title>
     <style>
-    	body {
-  			font-family: Arial, sans-serif;
-  			background: #EAF6FF;   /* MÀU XANH PASTEL */
-  			margin: 0;
-  			padding: 0;
+		body {
+    		font-family: Arial, sans-serif;
+    		margin: 0;
+    		padding: 0;
+
+    		background-image: url("nen.jpg"); /* ĐƯỜNG DẪN ẢNH NỀN */
+    		background-size: cover;           /* Phủ toàn bộ màn hình */
+    		background-position: center;      /* Căn giữa */
+    		background-repeat: no-repeat;     /* Không lặp ảnh */
+    		background-attachment: fixed;     /* Cố định ảnh khi cuộn */
 		}
+
         h1 {
             text-align: center;
             margin-bottom: 30px;
@@ -195,7 +201,3 @@ h2 { /* Giả sử bạn dùng thẻ h2 cho tiêu đề */
     </ul>
 </section>
 </html>
-
-
-
-
