--- a/index.html
+++ b/index.html
@@ -6,56 +6,12 @@
     <title>Thành viên nhóm 5</title>
 
     <style>
-        /* --- NAVBAR --- */
-.navbar {
-    width: 100%;
-    background: #ffffff;
-    padding: 15px 0;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-
-.navbar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-}
-
-.navbar ul li a {
-    text-decoration: none;
-    font-size: 18px;
-    color: #007bff;
-    font-weight: 600;
-    transition: 0.2s;
-    padding: 8px 14px;
-    border-radius: 8px;
-}
-
-.navbar ul li a:hover {
-    background: #EAF6FF;
-    color: #0056b3;
-}
-        
         body {
             font-family: Arial, sans-serif;
             background: #EAF6FF;
             margin: 0;
             padding: 0;
         }
-        <!-- NAVIGATION BAR -->
-<nav class="navbar">
-    <ul>
-        <li><a href="#">Trang chủ</a></li>
-        <li><a href="#">Thành viên</a></li>
-        <li><a href="#">Bài học</a></li>
-        <li><a href="#">Hình ảnh</a></li>
-    </ul>
-</nav>
 
         h1 {
             text-align: center;
@@ -119,14 +75,14 @@
 
 .lesson-list a {
     display: block;
-    width: 95%;            /* TĂNG TỪ 90% → 105% CHO KHUNG NGANG DÀI HƠN */
-    padding: 20px;
+    width: 95%;            /* TĂNG TỪ 90% → 110% CHO KHUNG NGANG DÀI HƠN */
+    padding: 20x;
     background: #f8f9fa;
     border-radius: 12px;
     text-decoration: none;
     color: #007bff;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 25px;
     transition: 0.2s;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     margin: 0 auto;        /* GIỮ CHO ĐẸP, CĂN GIỮA */
@@ -199,7 +155,3 @@
 
 </body>
 </html>
-
-
-
-
