--- a/index.html
+++ b/index.html
@@ -52,16 +52,14 @@
            BÀI HỌC — Ô DÀI FULL NGANG
         ========================== */
 
-       .lessons {
-    margin-top: 40px;
-    padding: 20px;
-    background: #ffffff;
-    border-radius: 12px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-    max-width: 900px;     /* TĂNG MỘT CHÚT CHO KHUNG RỘNG HƠN */
-    margin-left: auto;
-    margin-right: auto;   /* CĂN GIỮA KHUNG */
-}
+        .lessons {
+            margin: 40px auto;
+            padding: 20px;
+            max-width: 800px;
+            background: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+        }
 
         .lesson-list {
             list-style: none;
@@ -73,20 +71,19 @@
             margin-bottom: 15px;
         }
 
-.lesson-list a {
-    display: block;
-    width: 95%;            /* TĂNG TỪ 90% → 110% CHO KHUNG NGANG DÀI HƠN */
-    padding: 20x;
-    background: #f8f9fa;
-    border-radius: 12px;
-    text-decoration: none;
-    color: #007bff;
-    font-weight: 600;
-    font-size: 25px;
-    transition: 0.2s;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    margin: 0 auto;        /* GIỮ CHO ĐẸP, CĂN GIỮA */
-}
+        .lesson-list a {
+            display: block;
+            width: 100%;
+            padding: 18px 20px;
+            background: #f8f9fa;
+            border-radius: 8px;
+            text-decoration: none;
+            color: #0056d6;
+            font-weight: 600;
+            font-size: 18px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            transition: 0.2s;
+        }
 
         .lesson-list a:hover {
             background: #e2e6ea;
