--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         .lesson-list a {
             display: block;
             width: 100%;
-            padding: 18px 20px;
+            padding: 30px 20px; /* tăng khoảng trống trên/dưới */
             background: #f8f9fa;
             border-radius: 8px;
             text-decoration: none;
@@ -152,3 +152,4 @@
 
 </body>
 </html>
+
