--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
            BÀI HỌC — Ô DÀI FULL NGANG
         ========================== */
 
-        .lessons {
-            margin: 40px auto;
-            padding: 20px;
-            max-width: 800px;
-            background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-        }
+.lessons {
+    margin: 40px auto;
+    padding: 20px;
+    max-width: 1000px; /* tăng chiều rộng */
+    min-height: 600px; /* tăng chiều dài */
+    background: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+}
 
         .lesson-list {
             list-style: none;
@@ -152,4 +153,5 @@
 
 </body>
 </html>
+
 
