--- a/index.html
+++ b/index.html
@@ -73,18 +73,19 @@
         }
 
         .lesson-list a {
-            display: block;
-            width: 100%;
-            padding: 30px 20px; /* tăng khoảng trống trên/dưới */
-            background: #f8f9fa;
-            border-radius: 8px;
-            text-decoration: none;
-            color: #0056d6;
-            font-weight: 600;
-            font-size: 18px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-            transition: 0.2s;
-        }
+    display: block;
+    width: 95%;         /* giảm chiều ngang */
+    padding: 30px 15px; /* giảm padding trái/phải */
+    background: #f8f9fa;
+    border-radius: 8px;
+    text-decoration: none;
+    color: #0056d6;
+    font-weight: 600;
+    font-size: 18px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    transition: 0.2s;
+    margin: 0 auto;     /* canh giữa khung */
+}
 
         .lesson-list a:hover {
             background: #e2e6ea;
@@ -153,5 +154,6 @@
 
 </body>
 </html>
+
 
 
