--- a/index.html
+++ b/index.html
@@ -140,26 +140,25 @@
 
 <ul class="lesson-list">
     <li>
-        <a href="#">Bài 1 + 2: Làm quen với trí tuệ nhân tạo</a>
-        <!-- Nhúng Canva Bài 1+2 -->
-        <iframe src="https://www.canva.com/design/DAG1lItBaPM/view?embed" 
-                width="100%" height="500" style="border:0; margin-top:10px;" allowfullscreen></iframe>
+        <a href="https://www.canva.com/design/DAG1lItBaPM/view?utm_content=DAG1lItBaPM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+            Bài 1 + 2: Làm quen với trí tuệ nhân tạo
+        </a>
     </li>
     <li><a href="#">Bài 3: Một số thiết bị mạng thông dụng</a></li>
     <li><a href="#">Bài 4: Giao thức mạng</a></li>
     <li><a href="#">Bài 5: Thực hành chia sẻ tài nguyên trên mạng</a></li>
     <li>
-        <a href="#">Bài 6: Giao tiếp và ứng xử trong không gian mạng</a>
-        <!-- Nhúng Canva Bài 6 -->
-        <iframe src="https://www.canva.com/design/DAG2fE9kO9E/view?embed" 
-                width="100%" height="500" style="border:0; margin-top:10px;" allowfullscreen></iframe>
+        <a href="https://www.canva.com/design/DAG2fE9kO9E/view?utm_content=DAG2fE9kO9E&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+            Bài 6: Giao tiếp và ứng xử trong không gian mạng
+        </a>
     </li>
     <li><a href="#">Bài 7: HTML và cấu trúc trang web</a></li>
     <li><a href="#">Bài 8: Định dạng văn bản</a></li>
     <li><a href="#">Bài 9: Tạo danh sách, bảng</a></li>
     <li><a href="#">Bài 10: Tạo liên kết</a></li>
-    </ul>
-    </section>
+</ul>
 
+    </section>
     </body>
 </html>
+
