--- a/index.html
+++ b/index.html
@@ -140,12 +140,15 @@
 
 <ul class="lesson-list">
     <li>
-        <a href="https://www.canva.com/design/DAG1lItBaPM/view?utm_content=DAG1lItBaPM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+        <a href="https://www.canva.com/design/DAG1lItBaPM/x443j1maq3FFFfSX_jxMvw/edit?utm_content=DAG1lItBaPM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"_blank">
             Bài 1 + 2: Làm quen với trí tuệ nhân tạo
         </a>
     </li>
     <li><a href="#">Bài 3: Một số thiết bị mạng thông dụng</a></li>
-    <li><a href="#">Bài 4: Giao thức mạng</a></li>
+        <a href="https://www.canva.com/design/DAGzzzrEmJ4/CLsNfeL7fr05u5kddoBdMg/edit?utm_content=DAGzzzrEmJ4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"_blank">
+            Bài 4: Giao thức mạng
+        </a>
+    <li>
     <li><a href="#">Bài 5: Thực hành chia sẻ tài nguyên trên mạng</a></li>
     <li>
         <a href="https://www.canva.com/design/DAG2fE9kO9E/view?utm_content=DAG2fE9kO9E&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
@@ -161,4 +164,3 @@
     </section>
     </body>
 </html>
-
