--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             border-radius: 12px;
             text-align: center;
             box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+            cursor: pointer;
+            transition: 0.2s;
+        }
+
+        .member:hover {
+            transform: scale(1.03);
         }
 
         .member img {
@@ -46,47 +52,7 @@
         .name {
             font-size: 20px;
             font-weight: bold;
-            cursor: pointer;
             color: #007BFF;
-        }
-
-        /* Popup */
-        .popup {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.5);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .popup-content {
-            background: #fff;
-            width: 90%;
-            max-width: 450px;
-            padding: 25px;
-            border-radius: 12px;
-            text-align: center;
-            position: relative;
-        }
-
-        .popup-content img {
-            width: 160px;
-            height: 160px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 15px;
-        }
-
-        .close {
-            position: absolute;
-            right: 15px;
-            top: 10px;
-            font-size: 28px;
-            cursor: pointer;
         }
 
         /* Bài học */
@@ -133,63 +99,6 @@
             text-align: center;
         }
     </style>
-
-    <script>
-        // Dữ liệu 6 bạn
-        const profiles = {
-            "Đặng Nguyễn Trúc My": {
-                img: "anh1.jpg",
-                birth: "29/11/2008",
-                email: "trucmybtre2@gmail.com",
-                quote: "More of you, less of me."
-            },
-            "Nguyễn Bảo Thy": {
-                img: "anh2.jpg",
-                birth: "07/06/2008",
-                email: "thybao573@gmail.com",
-                quote: "안녕~ 여러분은 잘 지냈어요?🐼"
-            },
-            "Ngô Thanh Trúc": {
-                img: "anh3.jpg",
-                birth: "22/02/2008",
-                email: "ntt27011@gmail.com",
-                quote: "今は葉が黄色くなり、秋は過ぎ去りました。私は一生あなたのことを悲しむでしょう。"
-            },
-            "Huỳnh Ánh Dương": {
-                img: "anh4.jpg",
-                birth: "09/10/2008",
-                email: "aduo0908@gmail.com",
-                quote: "Vivre pour l'amour. Trouve la joie, appelle-moi🤙🏻"
-            },
-            "Nguyễn Huỳnh Bảo Hân": {
-                img: "anh5.jpg",
-                birth: "03/03/2008",
-                email: "baohannguyenhuynh00308@gmail.com",
-                quote: "I adjust my sails to always reach my destination."
-            },
-            "Tô Nguyễn Tường Vân": {
-                img: "anh6.jpg",
-                birth: "29/09/2008",
-                email: "tonguyentuongvan08@gmail.com",
-                quote: "妃就是妃，贵妃就是贵妃，差别人一个字，地位低别人一等。"
-            }
-        };
-
-        // Mở popup
-        function showProfile(name) {
-            const data = profiles[name];
-            document.getElementById("pImg").src = data.img;
-            document.getElementById("pName").innerText = name;
-            document.getElementById("pBirth").innerText = data.birth;
-            document.getElementById("pEmail").innerText = data.email;
-            document.getElementById("pQuote").innerText = data.quote;
-            document.getElementById("profilePopup").style.display = "flex";
-        }
-
-        function closeProfile() {
-            document.getElementById("profilePopup").style.display = "none";
-        }
-    </script>
 </head>
 
 <body>
@@ -197,48 +106,37 @@
     <h1>Các thành viên của nhóm</h1>
 
     <div class="container">
-        <div class="member">
+
+        <div class="member" onclick="location.href='my.html'">
             <img src="anh1.jpg" alt="">
-            <div class="name" onclick="showProfile('Đặng Nguyễn Trúc My')">Đặng Nguyễn Trúc My</div>
+            <div class="name">Đặng Nguyễn Trúc My</div>
         </div>
 
-        <div class="member">
+        <div class="member" onclick="location.href='thy.html'">
             <img src="anh2.jpg" alt="">
-            <div class="name" onclick="showProfile('Nguyễn Bảo Thy')">Nguyễn Bảo Thy</div>
+            <div class="name">Nguyễn Bảo Thy</div>
         </div>
 
-        <div class="member">
+        <div class="member" onclick="location.href='truc.html'">
             <img src="anh3.jpg" alt="">
-            <div class="name" onclick="showProfile('Ngô Thanh Trúc')">Ngô Thanh Trúc</div>
+            <div class="name">Ngô Thanh Trúc</div>
         </div>
 
-        <div class="member">
+        <div class="member" onclick="location.href='duong.html'">
             <img src="anh4.jpg" alt="">
-            <div class="name" onclick="showProfile('Huỳnh Ánh Dương')">Huỳnh Ánh Dương</div>
+            <div class="name">Huỳnh Ánh Dương</div>
         </div>
 
-        <div class="member">
+        <div class="member" onclick="location.href='han.html'">
             <img src="anh5.jpg" alt="">
-            <div class="name" onclick="showProfile('Nguyễn Huỳnh Bảo Hân')">Nguyễn Huỳnh Bảo Hân</div>
+            <div class="name">Nguyễn Huỳnh Bảo Hân</div>
         </div>
 
-        <div class="member">
+        <div class="member" onclick="location.href='van.html'">
             <img src="anh6.jpg" alt="">
-            <div class="name" onclick="showProfile('Tô Nguyễn Tường Vân')">Tô Nguyễn Tường Vân</div>
+            <div class="name">Tô Nguyễn Tường Vân</div>
         </div>
-    </div>
 
-    <!-- Popup -->
-    <div id="profilePopup" class="popup">
-        <div class="popup-content">
-            <span class="close" onclick="closeProfile()">&times;</span>
-            <img id="pImg" src="">
-            <h2 id="pName"></h2>
-            <p><strong>Ngày sinh:</strong> <span id="pBirth"></span></p>
-            <p><strong>Email:</strong> <span id="pEmail"></span></p>
-            <p><strong>Châm ngôn yêu thích:</strong></p>
-            <p id="pQuote" style="font-style: italic;"></p>
-        </div>
     </div>
 
     <!-- Danh sách bài học -->
