--- a/index.html
+++ b/index.html
@@ -144,11 +144,27 @@
         <h2>Danh sách Bài Học</h2>
 
         <ul class="lesson-list">
-            <li><a href="#">Bài 1 + 2: Làm quen với trí tuệ nhân tạo</a></li>
-            <li><a href="#">Bài 3: Một số thiết bị mạng thông dụng</a></li>
-            <li><a href="#">Bài 4: Giao thức mạng</a></li>
-            <li><a href="#">Bài 5: Chia sẻ tài nguyên</a></li>
-            <li><a href="#">Bài 6: Giao tiếp trong không gian mạng</a></li>
+            <li>
+                <a href="https://www.canva.com/design/DAG1lItBaPM/x443j1maq3FFFfSX_jxMvw/edit?utm_content=DAG1lItBaPM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+                    Bài 1 + 2: Làm quen với trí tuệ nhân tạo
+                </a>
+            </li>
+            <li>
+                <a href="#">Bài 3: Một số thiết bị mạng thông dụng</a>
+            </li>
+            <li>
+                <a href="https://www.canva.com/design/DAGzzzrEmJ4/CLsNfeL7fr05u5kddoBdMg/edit?utm_content=DAGzzzrEmJ4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+                    Bài 4: Giao thức mạng
+                </a>
+            </li>
+            <li>
+                <a href="#">Bài 5: Thực hành chia sẻ tài nguyên trên mạng</a>
+            </li>
+            <li>
+                <a href="https://www.canva.com/design/DAG2fE9kO9E/view?utm_content=DAG2fE9kO9E&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+                    Bài 6: Giao tiếp và ứng xử trong không gian mạng
+                </a>
+            </li>
             <li><a href="#">Bài 7: HTML và cấu trúc trang web</a></li>
             <li><a href="#">Bài 8: Định dạng văn bản</a></li>
             <li><a href="#">Bài 9: Tạo danh sách, bảng</a></li>
