--- a/index.html
+++ b/index.html
@@ -15,54 +15,61 @@
 
         h1 {
             text-align: center;
-            margin-bottom: 30px;
+            margin: 40px 0 30px;
+            font-size: 32px;
         }
 
         .container {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            max-width: 1000px;
+            gap: 30px;
+            max-width: 1100px;
             margin: 0 auto;
+            padding: 0 20px;
         }
 
         .member {
             background: #fff;
-            padding: 15px;
-            border-radius: 12px;
+            padding: 25px;
+            border-radius: 16px;
             text-align: center;
-            box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
             cursor: pointer;
-            transition: 0.2s;
+            transition: 0.25s;
         }
 
         .member:hover {
-            transform: scale(1.03);
+            transform: scale(1.05);
         }
 
         .member img {
-            width: 100%;
-            max-width: 180px;
-            height: 180px;
+            width: 220px;
+            height: 220px;
             object-fit: cover;
             border-radius: 50%;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
         .name {
-            font-size: 20px;
+            font-size: 24px;
             font-weight: bold;
             color: #007BFF;
         }
 
         /* Bài học */
         .lessons {
-            margin: 40px auto;
-            padding: 20px;
-            max-width: 1000px;
+            margin: 50px auto;
+            padding: 30px;
+            max-width: 1100px;
             background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+            border-radius: 12px;
+            box-shadow: 0 3px 12px rgba(0,0,0,0.15);
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 25px;
+            font-size: 28px;
         }
 
         .lesson-list {
@@ -72,31 +79,27 @@
         }
 
         .lesson-list li {
-            margin-bottom: 15px;
+            margin-bottom: 18px;
         }
 
         .lesson-list a {
             display: block;
-            width: 95%;
-            padding: 30px 15px;
+            width: 96%;
+            padding: 32px 18px;
             background: #f8f9fa;
-            border-radius: 8px;
+            border-radius: 10px;
             text-decoration: none;
             color: #0056d6;
             font-weight: 600;
-            font-size: 18px;
+            font-size: 20px;
             margin: 0 auto;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-            transition: 0.2s;
+            box-shadow: 0 3px 8px rgba(0,0,0,0.12);
+            transition: 0.22s;
         }
 
         .lesson-list a:hover {
             background: #e2e6ea;
-            transform: translateX(5px);
-        }
-
-        h2 {
-            text-align: center;
+            transform: translateX(7px);
         }
     </style>
 </head>
@@ -149,17 +152,13 @@
                     Bài 1 + 2: Làm quen với trí tuệ nhân tạo
                 </a>
             </li>
-            <li>
-                <a href="#">Bài 3: Một số thiết bị mạng thông dụng</a>
-            </li>
+            <li><a href="#">Bài 3: Một số thiết bị mạng thông dụng</a></li>
             <li>
                 <a href="https://www.canva.com/design/DAGzzzrEmJ4/CLsNfeL7fr05u5kddoBdMg/edit?utm_content=DAGzzzrEmJ4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
                     Bài 4: Giao thức mạng
                 </a>
             </li>
-            <li>
-                <a href="#">Bài 5: Thực hành chia sẻ tài nguyên trên mạng</a>
-            </li>
+            <li><a href="#">Bài 5: Thực hành chia sẻ tài nguyên trên mạng</a></li>
             <li>
                 <a href="https://www.canva.com/design/DAG2fE9kO9E/view?utm_content=DAG2fE9kO9E&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
                     Bài 6: Giao tiếp và ứng xử trong không gian mạng
